--- a/app/index.html
+++ b/app/index.html
@@ -12,11 +12,29 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="bower_components/ui-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <style rel="stylesheet" type="text/css">
     ul li{
       display: inline-block;
+    }
+    .dropdown-menu li{
+        display: block; !important;
+    }
+      .resultList{
+          text-align: center;
+          border: 1px solid #e6e1e1;
+          margin-top: 10px;
+      }
+      .resultList ul{
+          margin-top: 10px;
+      }
+    .table td {
+        text-align: center;
+    }
+    .table tbody th {
+        text-align: center;
     }
   </style>
 </head>
@@ -53,5 +71,8 @@
   <script src="components/version/interpolate-filter.js"></script>
   <script src="utils/storageFactory.js"></script>
   <script src="utils/constant.js"></script>
+
+  <script src="bower_components/ui-bootstrap/ui-bootstrap.js"></script>
+  <script src="bower_components/ui-bootstrap/ui-bootstrap-tpls.js"></script>
 </body>
 </html>
