costumized for hotstar

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="bower_components/ui-bootstrap/ui-bootstrap-csp.css">
+  <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <style rel="stylesheet" type="text/css">
@@ -35,6 +35,9 @@
     }
     .table tbody th {
         text-align: center;
+    }
+    .state-input .dropdown-menu{
+      width:100%;
     }
   </style>
 </head>
@@ -72,7 +75,7 @@
   <script src="utils/storageFactory.js"></script>
   <script src="utils/constant.js"></script>
 
-  <script src="bower_components/ui-bootstrap/ui-bootstrap.js"></script>
-  <script src="bower_components/ui-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 </body>
 </html>
